# raga-LDM

./: .gitattributes  .gitignore  README.md  audio_config.py  convert_spleeter_weights.py  cudacheck.py  example_raga_usage.py  infer_spleeter_5stems.py  infer_spleeter_torch.py  main.py  process_audio_pipeline.py  pyproject.toml  requirements.txt  run_processing.py  temp  train_spleeter_5stems.py  train_spleeter_torch.py
MusicLDM/: .gitignore  README.md  musicldm_environment.yml
MusicLDM/interface/: config_16k_64.json  generate_script.sh  infer_musicldm.py  musicldm.yaml  sample_file.txt
MusicLDM/interface/src/hifigan/: models.py
MusicLDM/interface/src/latent_diffusion/: lr_scheduler.py  util.py
MusicLDM/interface/src/latent_encoder/: autoencoder.py
MusicLDM/interface/src/utilities/: model.py  tools.py
configs/: colab_5stems_carnatic.json
example_dataset/: train.csv  validation.csv
legacy/: cudacheck.py  infer_spleeter_5stems.py  train_spleeter_5stems.py
legacy/spleeter/: pyproject.toml
legacy/spleeter/configs/5stems_carnatic/: base_config.json
legacy/spleeter/spleeter/: dataset.py
legacy/utils/: __init__.py  init_pretrained_weights.py  training_helpers.py
ragaldm/: __init__.py
ragaldm/spleeter_torch/: __init__.py  audio.py  dataset.py  losses.py  model.py
spleeter/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  spleeter.ipynb
spleeter/conda/spleeter/: meta.yaml
spleeter/configs/5stems_carnatic/: base_config.json  sanidha_config.json
spleeter/docker/: cuda-10-1.dockerfile  spleeter-conda.dockerfile  spleeter.dockerfile
spleeter/spleeter/: __init__.py  __main__.py  dataset.py  options.py  separator.py  types.py
spleeter/spleeter/audio/: __init__.py  adapter.py  convertor.py  ffmpeg.py  spectrogram.py
spleeter/spleeter/model/: __init__.py
spleeter/spleeter/model/functions/: __init__.py  blstm.py  unet.py
spleeter/spleeter/resources/: __init__.py
spleeter/spleeter/utils/: __init__.py  configuration.py  logging.py  tensor.py
spleeter/tests/: __init__.py  test_command.py  test_eval.py  test_ffmpeg_adapter.py  test_github_model_provider.py  test_separator.py  test_train.py
utils/: __init__.py  init_pretrained_weights.py  training_helpers.py
wandb/: latest-run
wandb/offline-run-20260523_160133-083ej0l0/: run-083ej0l0.wandb
wandb/offline-run-20260523_160133-083ej0l0/files/: wandb-metadata.json
wandb/offline-run-20260523_161243-7o7q91ax/: run-7o7q91ax.wandb
wandb/offline-run-20260523_161243-7o7q91ax/files/: wandb-metadata.json
wandb/offline-run-20260523_162013-g1dgeppv/: run-g1dgeppv.wandb
wandb/offline-run-20260523_162013-g1dgeppv/files/: wandb-metadata.json
wandb/offline-run-20260523_162342-89c96pey/: run-89c96pey.wandb
wandb/offline-run-20260523_162342-89c96pey/files/: wandb-metadata.json
wandb/offline-run-20260523_162511-ra9wzzuf/: run-ra9wzzuf.wandb
wandb/offline-run-20260523_162511-ra9wzzuf/files/: wandb-metadata.json
wandb/offline-run-20260523_163158-kvxiydp3/: run-kvxiydp3.wandb
wandb/offline-run-20260523_163158-kvxiydp3/files/: requirements.txt  wandb-metadata.json
(+32 files in other folders)
