[project]
name = "ragaldm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "httpx[http2]>=0.19.0",
    "norbert>=0.2.1",
    "numpy<2.0.0",
    "pandas>=1.3.0",
    "tensorflow==2.15.0",
    "tensorflow-io-gcs-filesystem==0.35.0",
    "nvidia-cudnn-cu12==8.9.7.29",
    "spleeter",
    "librosa>=0.11.0",
    "wand>=0.7.1",
    "wandb>=0.19.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["ragaldm", "utils"]

[tool.uv.sources]
spleeter = { path = "spleeter", editable = true }
